<resources>
    <string name="app_name" translatable="false">Help4U</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_wishList">Wish List</string>
    <string name="menu_career_test">Career Test</string>
    <string name="menu_jobList">Job List</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about_us">About Us</string>
    <string name="career_test">Career Test</string>
    <string name="job_list">Job List</string>

    <!--by YeuHarn -->
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="cancel">Cancel</string>
    <string name="job_category">Job Category</string>
    <string name="sign_up">Sign Up</string>
    <string name="take_test">Take a Career Test</string>
    <string name="test_result">Career Test Result</string>
    <string name="information_technology">Information Technology</string>
    <string name="finance_and_business">Finance and Business</string>
    <string name="choose_qualification">Please choose your qualification</string>

    <!-- career test result activity by YeuHarn -->
    <string name="more_job">More Job</string>
    <string name="recommended_job">Recommended Job</string>

    <!-- career questionnaire items by YeuHarn -->
    <string name="question_label">Question</string>
    <string name="submit">Submit</string>
    <string name="please_answer_all_question">Please answer all the questions</string>
    <string name="test_result_not_available">Test Result not available</string>
    <string name="recommended_job_not_available">Recommended Job not available</string>
    <string name="IT_label">Information\nTechnology</string>
    <string name="business_label">Finance and\nBusiness</string>

    <!-- job titles and descriptions for recommended job by YeuHarn-->
    <string-array name="job_title">
        <item>Programmer, Software manager</item>
        <item>Data scientist</item>
        <item>Accountant</item>
        <item>Entrepreneur</item>
    </string-array>

    <string-array name="job_list_data">
        <item>Accountant</item>
        <item>Accountant</item>
        <item>Programmer</item>
        <item>Software Manager</item>
        <item>Data Scientist</item>
        <item>Programmer</item>
        <item>Data Scientist</item>
        <item>Software Manager</item>
    </string-array>

    <string-array name="job_desc">
        <item>
            A programmer creates the code for software applications.
            After a software developer designs a computer program, the programmer writes code based on the design.\n
            Software managers are responsible for overseeing and coordinating the people,
            resources and processes required to deliver new software or upgrade existing products.
        </item>
        <item>
            A data scientist is someone who makes value out of data.
            Such a person proactively fetches information from various sources and analyze it for
            better understanding about how the business performs,
            and to build AI tools that automate certain processes within the company.
        </item>
        <item>
            An accountant is a practitioner of accounting or accountancy, which is the measurement,
            disclosure or provision of assurance about financial information that helps managers,
            investors, tax authorities and others make decisions about allocating resources.
        </item>
        <item>
            Talking about an entrepreneur, means talking about a person with great,
            innovating ideas that identifies the need for the creation of a business to feel a void.
            Entrepreneurs can be people of all ages. Their characteristics are creativity,
            imagination and a thirst for work.
        </item>
    </string-array>

    <!--by wenz11-->
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="google_sign_up">Google Sign Up</string>
    <string name="google_sign_in">Google Sign In</string>

    <!--fragment_title by wenz11-->
    <string name="welcome_msg">Welcome To Help4U</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="help4u_logo" translatable="false">Help4U Logo</string>
    <string name="test" translatable="false">Test</string>
    <string name="logout">Logout</string>
    <string name="job" translatable="false">test</string>
    <string name="jobSmallDesc" translatable="false">test2</string>
    <string name="fullDesc" translatable="false">test1</string>
    <string name="smallDesc" translatable="false">test</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="navigation">direction</string>
    <string name="compName">Company Name</string>

    <string-array name="Joblist">
        <item>Default</item>
        <item>Programmer</item>
        <item>Software Manager</item>
        <item>Accountant</item>
        <item>Data Scientist</item>
    </string-array>
    <string name="title_activity_navigation">Map</string>
    <string name="job_description">Job Description</string>
    <string name="salary">Salary:</string>
    <string name="salaryAmount" translatable="false">RM 1000</string>
    <string name="companyAddress">Company Address</string>
    <string name="address">Address</string>
    <string name="about_us_full">A social/community mobile application developed by Ang Zuan Wen, Lim Yeu Harn, and Chong Jia Yi.         This application is to solve  1 of the united nations’ sustainable development goals (which is unemployment).         The goal of the application is to help user able to find their suitable work environment and occupations.</string>
    <string name="company_email">Company Email</string>

    <!--For User Profile module by wenz11-->
    <string name="user_profile_background">User Profile Background</string>
    <string name="user_profile">User Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="save_profile">Save Profile</string>
    <string name="enter_your_favorite_quote">Enter your favorite quote</string>
    <string name="quote">Quote</string>

    <!-- Setting element by YeuHarn -->
    <string name="clear_test_result">Clear Test Result</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="clear_test_result_message">Are you sure you want to clear test result?</string>
    <string name="apply_for_job">Enquires Details about this job</string>
    <string name="test_result_cleared">Test Result cleared</string>
    <string name="career_test_question">Career Test Question</string>
    <string name="qualification">Qualification</string>
    <string name="job_detail">Job Details</string>
    <string name="quit">quit</string>
    <string name="job_wishlist">Job Wishlist</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="job_interview">Job Interview</string>
    <string name="adding_to_wishlist_toast">Adding to Wishlist...</string>
    <string name="add_to_wishlist_successful">Successfully added to your Wish List!</string>
    <string name="login_successful">Login Successfully!</string>
    <string name="invalid_login_credentials">Invalid Login Credentials!</string>
    <string name="quit_dialog">Quit</string>
    <string name="confirm_quit_dialog">Confirm Quit</string>
    <string name="required">Required</string>
    <string name="invalid_email_format">Invalid Email Address Format</string>
    <string name="password_format_error_message">Password must be more than 6 characters</string>
    <string name="position">Position</string>
    <string name="job_title" translatable="false">Job title</string>
    <string name="company_logo" translatable="false">company logo</string>
    <string name="logout_successful">Successfully Logout!</string>
    <string name="account_create_successful">Account has successfully been created!</string>
    <string name="account_cannot_create">Account cannot be created!</string>
    <string name="email_already_registered">This email has already been registered with Help4U!</string>
    <string name="password_not_match">Password does not match</string>
    <string name="invalid_phone_format">Invalid Phone Number Format +60XXXXXXXXX</string>
    <string name="uploading">Uploading</string>
    <string name="could_not_upload_image">Could Not Update Image</string>
    <string name="no_image_selected">No image selected</string>
    <string name="upload_in_progress">Upload in progress</string>
    <string name="image_clicked">Kindly choose a photo to change profile picture</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="your_name">Your Name</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="remove_from_wishlist_successful">Successfully Remove From Wishlist!</string>
    <string name="updating_profile_picture">Updating profile picture</string>

</resources>
